2009-03-15  Steven Munroe  <munroesj@us.ibm.com>

	This patch is contributed under the terms of the MIT/X11 license

	* mkbundle.cs (WriteSymbol): Use .p2align 5 instead of .align 32
	to get consistent results on all platforms.

2008-02-23  Marek Safar  <marek.safar@gmail.com>

	* mkbundle.cs: Close resources correctly when something goes wrong.
	
2007-10-19  Robert Jordan  <robertj@gmx.net>

	* mkbundle.cs (Execute): [Windows] since recently (?) cygwin's bash
	doesn't	strip CRLFs from ``-style command interpolation anymore.
	The superfluous CRLF was breaking the gcc command line.

	* mkbundle.cs (Execute): [Windows] set UseShellExecute = false to
	prevent	the creation of a new console windows.

2007-01-03  Tor Lillqvist  <tml@novell.com>

	Add the possibility to bundle also the machine.config file, from
	#80305.

	* mkbundle.cs: Add option --machine-config. Warn the user that a
	bundled machine.config file should be checked that it doesn't
	contain sensitive data like private machine keys.

	If that option was used, write the contents of the machine.config
	file to the asm output file, and write code to call
	mono_register_machine_config() with the data to the C output file.

2006-11-29  Joshua Tauberer  <jit@occams.info>

	* mkbundle.cs: Added --nomain option to create the host.c file
	  without a main() function so that it can be used in libraries.
	* Added: template_main.c, the template for the main() function.
	* template(_z).c: Factored out the main() method bits and left
	  a mono_mkbundle_init() function which is called from main(),
	  or should be called by the user library.

2006-11-01  Robert Jordan  <robertj@gmx.net>

	* Makefile: Enable the NET_2_0 build.
	
2006-09-08  Robert Jordan  <robertj@gmx.net>

	* mkbundle.cs, TODO: The `-z' option is now supported under
	Windows.

2006-09-05  Kornél Pál  <kornelpal@gmail.com>

	* TODO: Renamed mono-1.dll to mono.dll.

2005-12-29  Robert Jordan  <robertj@gmx.net>
